--- a/README.adoc
+++ b/README.adoc
@@ -1,11 +1,3 @@
-= Nordic nrf5x
+= WE MOVED BACK TO A MONOREPO HERE: https://github.com/ZigEmbeddedGroup/microzig
 
-HALs and register definitions for nrf5x devices
-
-== What version of Zig to use
-
-Right now we are following https://ziglang.org/download/[master], but once 0.11.0 is released, we will be switching to the latest stable version of Zig.
-
-== Renode supports:
-
-- nrf52840 development kit
+== Future contributions go the main repository
